cmake_minimum_required(VERSION 3.10)
project(get_fasta_info VERSION 2.4.1)
set(CMAKE_C_STANDARD 99)
find_package(ZLIB REQUIRED)
add_executable(get_fasta_info src/get_fasta_info.c)
add_executable(get_fastq_info src/get_fastq_info.c)
target_link_libraries(get_fasta_info ZLIB::ZLIB m)
target_link_libraries(get_fastq_info ZLIB::ZLIB m)
install(TARGETS get_fasta_info DESTINATION bin)
install(TARGETS get_fastq_info DESTINATION bin)
